--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,11 @@
 recursive-include streamlit_antd_components/frontend/build *
+include LICENSE
+include CHANGELOG.md
+include readme.md
+include pyproject.toml
+recursive-include img *.jpg *.png
+recursive-include tests *.py
+global-exclude __pycache__
+global-exclude *.py[cod]
+global-exclude *.so
+global-exclude .DS_Store
